--- a/index.html
+++ b/index.html
@@ -276,19 +276,19 @@ https://cdn.jsdelivr.net/npm/jquery@3.6.3/dist/jquery.min.js
               </div>
               <div class="swiper-slide">
                 <div class="slide_title">
-                  <p class="projectDate">2022-11</p>
-                  <p class="projectName_En">KNOTTERS WEB PUBLISHING</p>
-                  <p class="projectName_Kr">노터 웹퍼블리싱</p>
+                  <p class="projectDate">2023-01</p>
+                  <p class="projectName_En">PEACHC WEB PUBLISHING</p>
+                  <p class="projectName_Kr">피치씨 웹퍼블리싱</p>
                   <div class="projectItmBox">
-                    <p class="projectItm">#팀작업</p>
+                    <p class="projectItm">#개인작업</p>
                     <p class="projectItm">#UI/UX</p>
                     <p class="projectItm">#JAVASCRIPT</p>
                   </div>
                 </div>
-                <a href="#"
+                <a href="./peachc_Page.html" target="_blank"
                   ><img
                     class="Project_Img"
-                    src="./project/knotters/img_main_intro.jpg"
+                    src="./project/peachc/common/images/modal/PALETTE_lay_04.jpg"
                     alt="project2"
                 /></a>
               </div>
@@ -296,14 +296,14 @@ https://cdn.jsdelivr.net/npm/jquery@3.6.3/dist/jquery.min.js
                 <div class="slide_title">
                   <p class="projectDate">2022-11</p>
                   <p class="projectName_En">KNOTTERS WEB PUBLISHING</p>
-                  <p class="projectName_Kr">노터 웹퍼블리싱</p>
+                  <p class="projectName_Kr">노터스 웹퍼블리싱</p>
                   <div class="projectItmBox">
                     <p class="projectItm">#팀작업</p>
                     <p class="projectItm">#UI/UX</p>
                     <p class="projectItm">#JAVASCRIPT</p>
                   </div>
                 </div>
-                <a href="#"
+                <a href="./Knotters.html" target="_blank"
                   ><img
                     class="Project_Img"
                     src="./project/knotters/img_main_intro.jpg"
