--- a/peachc.html
+++ b/peachc.html
@@ -7,7 +7,7 @@
     <title>피치씨</title>
 
     <!-- favicon -->
-    <link rel="shortcut icon" href="./common/images/logo/favicon.png" />
+    <link rel="shortcut icon" href="./project/peachc/common/images/logo/favicon_대지 1.png" />
 
     <!-- scroll To 아이콘 -->
     <link
@@ -536,7 +536,7 @@
         <!-- Swiper -->
         <div class="swiper mySwiper">
           <div class="swiper-wrapper">
-            <div class="swiper-slide AllBox">
+            <div class="swiper-slide All_Box Lip_Box">
               <img
                 src="./project/peachc/common/images/products/tints.png"
               />
@@ -546,17 +546,17 @@
                 <p>친구가 제가 쓰고 있는 틴트 바르고<br> 마음에 든다고 해서 선물해 줬는데<br> 배송도 빠르고 너무 좋아요!<br>다음번에도 주문 할게요!</p>
               </div>
             </div>
-            <div class="swiper-slide AllBox">
+            <div class="swiper-slide All_Box Eye_Box">
               <img
                 src="./project/peachc/common/images/products/a16aa28d8bcd0fef877c8c8091c11a1d.png"
               />
-              <div class="review_mention AllBox">
+              <div class="review_mention">
                 <span>★★★★★ </span>
                 <h3>시즈널 블렌딩<br>아이섀도우 팔레트</h3>
                 <p>어디에서도 볼수없는 예쁜 컬러...<br> 글리터도 너무 반짝여서<br>최고에요 ㅠㅠ</p>
               </div>
             </div>
-            <div class="swiper-slide">
+            <div class="swiper-slide All_Box Eye_Box">
               <img class="liner"
                 src="./project/peachc/common/images/products/slimwaterprooffixxyliner.png"
               />
@@ -566,7 +566,7 @@
                 <p>10개째 쓰고 있어요~~<br>절대 안지워지고 자연스러운 발색 <br>너무 좋아요!!</p>
               </div>
             </div>
-            <div class="swiper-slide">
+            <div class="swiper-slide All_Box Eye_Box">
               <img class="mascara"
                 src="./project/peachc/common/images/products/mascara.png"
               />
@@ -576,7 +576,73 @@
                 <p>생각치도 못하게 인생템 얻었어요!<br> 컬링도 고정력도 좋아서<br> 데일리템으로 찰떡입니다!</p>
               </div>
             </div>
-            <div class="swiper-slide">
+            <div class="swiper-slide All_Box Face_Box">
+              <img class="base"
+                src="./project/peachc/common/images/products/base.png"
+              />
+              <div class="review_mention">
+                <span>★★★★★ </span>
+                <h3>피치 글로우 메이크업베이스</h3>
+                <p>아침에 화장할 시간없을때<br>바르면 톤업 효과가 나서 좋아요!</p>
+              </div>
+            </div>
+            <div class="swiper-slide All_Box Lip_Box">
+              <img class="lipstik"
+                src="./project/peachc/common/images/products/lipstik.png"
+              />
+              <div class="review_mention">
+                <span>★★★★★ </span>
+                <h3>이지 매트 립스틱</h3>
+                <p>가볍고 부드럽게 발려요!<br>컬러도 너무 예뻐요!<br>다음에 다른 컬러로 또 구입할래요!</p>
+              </div>
+            </div>
+            <div class="swiper-slide All_Box Face_Box">
+              <img
+                src="./project/peachc/common/images/products/custion.png"
+              />
+              <div class="review_mention">
+                <span>★★★★★ </span>
+                <h3>꿀복숭아 쿠션</h3>
+                <p>옅게 화장할때 잘 쓰고 있어요~<br>좋아요!</p>
+              </div>
+            </div>
+          </div>
+          <!-- <div class="swiper-button-next"></div>
+          <div class="swiper-button-prev"></div> -->
+          <div class="swiper-scrollbar"></div>
+          <!-- <div class="swiper-pagination"></div> -->
+        </div>
+      </div>
+      <div class="review_Box review_Box2">
+        <div class="review_title">
+          <div class="title">
+            <h3>
+              <span>Review</span>
+            </h3>
+          </div>
+          <ul class="review_Menu">
+            <li class="reviewMenu All">All</li>
+            <li class="reviewMenu Face">Face</li>
+            <li class="reviewMenu Eye">Eye</li>
+            <li class="reviewMenu Lip">Lip</li>
+          </ul>
+        </div>
+        <!-- Swiper -->
+        <div class="swiper mySwiper">
+          <div class="swiper-wrapper">
+            
+            <div class="swiper-slide All_Box Face_Box">
+              <img class="base"
+                src="./project/peachc/common/images/products/base.png"
+              />
+              <div class="review_mention">
+                <span>★★★★★ </span>
+                <h3>피치 글로우 메이크업베이스</h3>
+                <p>아침에 화장할 시간없을때<br>바르면 톤업 효과가 나서 좋아요!</p>
+              </div>
+            </div>
+            
+            <div class="swiper-slide All_Box Face_Box">
               <img
                 src="./project/peachc/common/images/products/custion.png"
               />
