--- a/peachc_Page.html
+++ b/peachc_Page.html
@@ -4,23 +4,18 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>웹포트폴리오</title>
+    <title>peach c</title>
 
     <!-- favicon -->
     <link rel="shortcut icon" href="./common/images/logo/favicon.png" />
-
-    <!-- scroll To 아이콘 -->
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,100,0,0"
-    />
 
     <!-- reset -->
     <link rel="stylesheet" href="./common/minireset.min.css" />
     <!-- font-->
     <link rel="stylesheet" href="./common/fonts/font.css" />
+    <link rel="stylesheet" href="./project/peachc/common/font/font.css" />
     <!-- style.css -->
-    <link rel="stylesheet" href="./project/identity/style/identity.css" />
+    <link rel="stylesheet" href="./project/peachc/common/style/peachc_Page.css" />
 
     <!-- jQuery-->
     <script src="
@@ -29,17 +24,17 @@
 
     <!-- <script src="https://code.jquery.com/jquery-migrate-3.4.0.min.js"></script> -->
     <!-- js -->
-    <script defer src="./project/identity/style/identity.js"></script>
+    <script defer src="./project/peachc/common/style/peachc_Page.js"></script>
   </head>
   <body>
     <header>
-      <h1>
-       <a onClick="window.location.reload()" href="./index.html"><img
-        class="header_Logo2"
-        src="./common/images/logo/header-logo.png"
-        alt="logo2"
-      /></a>
-      </h1>
+        <h1>
+            <a onClick="window.location.reload()" href="./index.html"><img
+             class="header_Logo2"
+             src="./common/images/logo/header-logo.png"
+             alt="logo2"
+           /></a>
+           </h1>
       <ul class="Menu">
         <li class="menu_Main text_doc"><a href="/index.html">Main</a></li>
         <li class="menu_Work text_doc"><a href="#">Work</a></li>
@@ -50,8 +45,8 @@
     <main class="page-start">
       <div class="projectTitleBox">
         <div class="projectTitle">
-          <h2>WEB PORTFOLIO</h2>
-          <h3>웹 포트폴리오</h3>
+          <h2>PEACH C WEB PORTFOLIO</h2>
+          <h3>피치씨 웹퍼블리싱</h3>
         </div>
         <div class="SubTitle_Box">
           <p>#개인작업</p>
@@ -69,24 +64,23 @@
         </div>
         <div class="mentionBox">
           <div class="mention">
-            <h2>풀페이지 스크롤과 동적인 애니메이션이 들어간 웹사이트</h2>
+            <h2>슬라이드 애니메이션이 들어간 동적인 웹사이트</h2>
             <p>
-              프로젝트를 명확하게 구분하기 위해 풀페이지를 활용하여 웹사이트를
-              제작하였습니다.<br />
-              <br />사람들의 흥미를 이끌도록 일러스트 Mesh툴을 활용하여,
-              화려한 색감이 돋보이도록<br />제작하였습니다. 또한
-              JavaScript와 jquery를 이용하여 동적인 화면을 구현시켜 정보를<br />
-              전달하는 것을 목표로 하였습니다.
+                뷰티 코스메틱 브랜드 피치씨의 밝고 채도 높은 이미지와 하이틴 감성이 돋보이도록<br>
+웹 사이트를 리뉴얼 하였습니다.<br>
+
+<br>기존에 구성되었던 단순히 이미지를 나열한 레이아웃에서 벗어나, 다양한 동적인 슬라이드<br>애니메이션과 피치씨의 브랜드 컨셉을 보여줄 수 있는 about 페이지를 새롭게 제작하여,<br>
+피치씨 브랜드를 각인시키고자 하였습니다.
             </p>
           </div>
           <div class="box">
             <div class="box_1 project">
               <h4>프로젝트</h4>
-              <p>웹포트폴리오</p>
+              <p>PEACH C</p>
             </div>
             <div class="box_1 date">
               <h4>작업기간</h4>
-              <p>23.01.16 ~ 23.02.20</p>
+              <p>23.02.16 ~ 23.02.26</p>
             </div>
             <div class="box_1 set">
               <h4>기여도</h4>
@@ -101,38 +95,28 @@
         </div>
         <div class="Box DesignBox">
           <div class="Identity">
-            <h2 class="innerTitle">Identity</h2>
+            <h2 class="innerTitle">Brand Identity</h2>
             <div class="logo">
               <figure class="figure_logobk">
                 <img
                   class="logo_bk"
-                  src="./common/images/logo/header-logo-bk.png"
-                  alt="bk_logo"
-                />
-                <figcaption>Logo</figcaption>
-              </figure>
-              <figure class="figure_symbol">
-                <img
-                  class="symbol"
-                  src="./common/images/logo/header-logo.png"
-                  alt="logo"
+                  src="/project/peachc/common/images/logo/favicon_대지 1.png"
+                  alt="favicon"
                 />
                 <figcaption>Symbol</figcaption>
               </figure>
               <p class="logo_mention">
-                아이덴티티에는 내 디자인 열정에 대한 “다채로움”,<br> “트렌디한”,
-                “즐거움” 을 표현하여 디자인하였습니다.<br />
-                <br />심볼 background-color를 통해 “다채로움”을 표현하였고,
-                두가지 폰트 스타일을 통해 변하는 트렌드를 감지한다는
-                “트렌디한”을 표현하였습니다. 마지막으로 심볼의 곡선을 통해
-                “즐거움”을 표현하였습니다.
+                브랜드 피치씨의 대표 심볼을 새롭게 리디자인을 하였습니다.<br>
+
+<br>기존에 사용하던 둔탁한 Shape과 달리 라운드를 강조하여 브랜드가 가지고 있는<br>
+부드러움과 사랑스러움을 표현하였습니다. 컬러는 파스텔톤으로 사용하여<br> 피치씨 브랜드가 가지고 있는 이미지와 브랜드명이 연상되도록 제작하였습니다.
               </p>
             </div>
           </div>
           <h2 class="innerTitle innerMg">Keyword</h2>
           <h2 class="innerMention Keyword">
-            <span class="bg">#다채로운</span class="bg"> + <span class="bg">#트렌디한</span> +
-            <span class="bg">#즐거운</span> = <span class="bg">생기를 불어넣는 디자이너</span>
+            <span class="bg">#복숭아</span class="bg"> + <span class="bg">#부드러움</span> +
+            <span class="bg">#사랑스러움</span> = <span class="bg">PEACH C</span>
           </h2>
           <h2 class="innerTitle innerMg">Tool</h2>
           <div class="toolBox">
@@ -155,21 +139,19 @@
             <h2 class="circle circle1"></h2>
             <h2 class="circle circle2"></h2>
             <h2 class="circle circle3"></h2>
-            <h2 class="circle circle4"></h2>
           </div>
           <h2 class="innerTitle innerMg">TYPOGRAPHY</h2>
           <div class="TYPOGRAPHYBox">
             <div class="KO">
               <!-- <h2 class="lng">KO</h2> -->
               <div class="font border">
-                <p class="noto">NotoSans</p>
-                <p class="yang">양진체</p>
+                <p class="Spoqa">SpoqaHanSansNeo</p>
               </div>
             </div>
             <div class="ENG">
               <!-- <h2 class="lng">ENG</h2> -->
               <div class="font">
-                <p class="paly">PlayfairDisplay</p>
+                <p class="Frank">Frank</p>
               </div>
             </div>
           </div>
@@ -181,13 +163,12 @@
         </div>
         <div class="Box PublishingBox">
           <ul>
-            <li>풀페이지 스크롤과 animation을 활용하여 동적인 움직임 부여</li>
-            <li>position fixed를 활용하여, 타이틀 위치 고정</li>
+            <li>transform을 사용하여 다양한 animation 효과를 부여</li>
+            <li>마우스 hover 이벤트를 사용하여, 재미 요소 부여</li>
             <li>
-              헤더 로고 및 폰트 컬러를 스크롤 위치에 따라 변경 되도록 jquery를
-              통해 구현
+                Scroll 위치에 따라 헤더 스타일 변경
             </li>
-            <li>Scroll To 이벤트를 활용하여 페이지 이동 구현</li>
+            <li>animation이 사용된 배너를 제작</li>
           </ul>
         </div>
       </div>
@@ -196,54 +177,39 @@
           <h2>04.Review.</h2>
         </div>
         <div class="Box ReviewBox">
-          <h2>#Scroll 길이에 따른 else if 문</h2>
+          <h2>#Scroll 길이에 따른 헤더 스타일 변경</h2>
           <p>
-            스크롤 길이에 따라 꾸밈 요소 중 하나인 헤더 로고 및 폰트 컬러가
-            변경되도록 jquery의 else if 문을 이용하여 구현했습니다.
+            스크롤 위치에 따라 헤더의 스타일이 변경되도록  jquery  else if 문을 통해 구현했습니다.
           </p>
-          <h2>#타이틀 fixed의 값을 Scroll 길이에 따라 변형</h2>
+          <h2>#scrollbar로 현재 위치 표현</h2>
           <p>
-            메인 페이지에서 꾸밈 요소중 하나인 현 위치를 알려주는 타이틀 position
-            값을 fixed로 지정한 뒤 jquery의 else if 문을 통해 scroll 위치에
-            따라 타이틀이 변경되도록 구현했습니다.
+            제품 리뷰 페이지에서 scrollbar API를 사용하여 사람들이 현재 위치를 알 수 있도록 제작하였습니다.
           </p>
-          <h2>#Scroll 페이드인업 애니메이션</h2>
+          <h2>
+            #Scroll animation으로 동적인 움직임 부여</h2>
           <p>
-            페이지 넘어갈 때마다 해당 콘텐츠가 페이드인업 효과로 올라오도록
-            JavaScript의 for if문과 CSS 애니메이션을 이용하여 구현하였습니다.
-          </p>
-          <h2>#다양한 마우스 호버 이벤트</h2>
-          <p>
-            마우스 호버시 발생되는 이벤트를 다양하게 구현하였습니다. 먼저
-            헤더에 마우스 호버시 텍스트 밑줄이 생성되도록 하였으며, 또한
-            컨텍트 페이지 부분에 마우스 호버시 배경 및 폰트 컬러 변경, 텍스트
-            밑줄이 생성되도록 구현하였습니다. 또 애니메이션이 구현되고 있는
-            하위에 위치한 Scroll To Top 요소에 마우스 호버시 애니메이션이 중단
-            되도록 구현하였습니다.
+            Products 페이지에서 Scroll 시 제품들이 페이드 인 느낌으로
+좌우에서 올라오도록 JavaScript를<br> 통해 구현하였습니다.
           </p>
           <div class="btn">
-            <a href="./identity.html" target="_blank"><button>View Site</button></a>
+            <a href="./peachc.html" target="_blank"><button>View Site</button></a>
           </div>
         </div>
       </div>
-        <div class="scrollTo">
-          <span class="material-symbols-outlined"> arrow_circle_up </span>
-          <p>Scroll To Top</p>
-        </div>
       <div class="banner">
         <div class="wishList_prev">
-            <a href="/Knotters.html">
+            <a href="/identity.html">
               <div class="prev_title">
                 <h3>Prev</h3>
-                <h2>Knotters</h2>
+                <h2>웹 포트폴리오</h2>
               </div>
             </a>
         </div>
         <div class="wishList_next">
-            <a href="./peachc_Page.html">
+            <a href="./Knotters.html">
               <div class="next_title">
                 <h3>Next</h3>
-                <h2>피치씨</h2>
+                <h2>Knotters</h2>
               </div>
             </a>
         </div>
