230223 작업 수정수정

--- a/Knotters.html
+++ b/Knotters.html
@@ -137,7 +137,7 @@
       </div>
       <div class="banner">
         <div class="wishList_prev">
-            <a href="/peachc_Page.html">
+            <a href="./peachc_Page.html">
               <div class="prev_title">
                 <h3>Prev</h3>
                 <h2>피치씨</h2>
