--- a/identity.html
+++ b/identity.html
@@ -232,7 +232,7 @@
         </div>
       <div class="banner">
         <div class="wishList_prev">
-            <a href="/Knotters.html">
+            <a href="./Knotters.html">
               <div class="prev_title">
                 <h3>Prev</h3>
                 <h2>Knotters</h2>
