--- a/peachc_Page.html
+++ b/peachc_Page.html
@@ -198,7 +198,7 @@
       </div>
       <div class="banner">
         <div class="wishList_prev">
-            <a href="/identity.html">
+            <a href="./identity.html">
               <div class="prev_title">
                 <h3>Prev</h3>
                 <h2>웹 포트폴리오</h2>
