--- a/Knotters.html
+++ b/Knotters.html
@@ -48,7 +48,7 @@
           <h3>노터스 웹퍼블리싱</h3>
         </div>
         <div class="SubTitle_Box">
-          <p>#작업</p>
+          <p>#팀작업</p>
           <p>#UI/UX</p>
           <p>#JAVASCRIPT</p>
           <p>#JQUERY</p>
