--- a/index.html
+++ b/index.html
@@ -334,56 +334,92 @@ https://cdn.jsdelivr.net/npm/jquery@3.6.3/dist/jquery.min.js
           <div class="swiper mySwiper">
             <div class="swiper-wrapper">
               <div class="swiper-slide">
-                <div class="slide_title">
-                  <p class="projectDate">2022-11</p>
-                  <p class="projectName_En">KNOTTERS WEB PUBLISHING</p>
-                  <p class="projectName_Kr">노터 웹퍼블리싱</p>
+                <div class="slide_title bk">
+                  <p class="projectDate">2021-05</p>
+                  <p class="projectName_En">SILHOUETTE PACKAGE DESIGN</p>
+                  <p class="projectName_Kr">실루엣 패키지 디자인</p>
                   <div class="projectItmBox">
-                    <p class="projectItm">#팀작업</p>
-                    <p class="projectItm">#UI/UX</p>
-                    <p class="projectItm">#JAVASCRIPT</p>
+                    <p class="projectItm">#개인작업</p>
+                    <p class="projectItm">#PACKAGE</p>
+                    <p class="projectItm">#ILLUSTRATOR</p>
                   </div>
                 </div>
-                <a href="#"
+                <a href="./PACKAGE_SILHOUETTE.html" target="_blank"
                   ><img
                     class="Project_Img"
-                    src="./project/knotters/img_main_intro.jpg"
+                    src="./common/images/project/실루엣패키지VER2.png"
+                    alt="package1"
+                /></a>
+              </div>
+              <div class="swiper-slide">
+                <div class="slide_title bk">
+                  <p class="projectDate">2021-11</p>
+                  <p class="projectName_En">ROSE MOON PACKAGE DESIGN</p>
+                  <p class="projectName_Kr">로즈문 패키지 디자인</p>
+                  <div class="projectItmBox">
+                    <p class="projectItm">#개인작업</p>
+                    <p class="projectItm">#PACKAGE</p>
+                    <p class="projectItm">#ILLUSTRATOR</p>
+                  </div>
+                </div>
+                <a href="#" target="_blank"
+                  ><img
+                    class="Project_Img"
+                    src="./common/images/project/ROSEMOON_PACKAGE.png"
                     alt="project1"
                 /></a>
               </div>
               <div class="swiper-slide">
-                <div class="slide_title">
-                  <p class="projectDate">2022-11</p>
-                  <p class="projectName_En">KNOTTERS WEB PUBLISHING</p>
-                  <p class="projectName_Kr">노터 웹퍼블리싱</p>
+                <div class="slide_title bk">
+                  <p class="projectDate">2019-10</p>
+                  <p class="projectName_En">NARULERA PACKAGE DESIGN</p>
+                  <p class="projectName_Kr">내츄렐라 패키지 디자인</p>
                   <div class="projectItmBox">
-                    <p class="projectItm">#팀작업</p>
-                    <p class="projectItm">#UI/UX</p>
-                    <p class="projectItm">#JAVASCRIPT</p>
+                    <p class="projectItm">#개인작업</p>
+                    <p class="projectItm">#PACKAGE</p>
+                    <p class="projectItm">#ILLUSTRATOR</p>
                   </div>
                 </div>
-                <a href="#"
+                <a href="#" target="_blank"
                   ><img
                     class="Project_Img"
-                    src="./project/knotters/img_main_intro.jpg"
+                    src="./common/images/project/NARULERA_3.png"
                     alt="project1"
                 /></a>
               </div>
               <div class="swiper-slide">
-                <div class="slide_title">
-                  <p class="projectDate">2022-11</p>
-                  <p class="projectName_En">KNOTTERS WEB PUBLISHING</p>
-                  <p class="projectName_Kr">노터 웹퍼블리싱</p>
+                <div class="slide_title bk">
+                  <p class="projectDate">2022-06</p>
+                  <p class="projectName_En">CABBAGE PACKAGE DESIGN</p>
+                  <p class="projectName_Kr">양배추 마스크팩 패키지 디자인</p>
                   <div class="projectItmBox">
-                    <p class="projectItm">#팀작업</p>
-                    <p class="projectItm">#UI/UX</p>
-                    <p class="projectItm">#JAVASCRIPT</p>
+                    <p class="projectItm">#개인작업</p>
+                    <p class="projectItm">#PACKAGE</p>
+                    <p class="projectItm">#ILLUSTRATOR</p>
                   </div>
                 </div>
-                <a href="#"
+                <a href="#" target="_blank"
                   ><img
                     class="Project_Img"
-                    src="./project/knotters/img_main_intro.jpg"
+                    src="./common/images/project/CABBAGE_PACKAGE_1.png"
+                    alt="project1"
+                /></a>
+              </div>
+              <div class="swiper-slide">
+                <div class="slide_title bk">
+                  <p class="projectDate">2020-08</p>
+                  <p class="projectName_En">CELINA PACKAGE DESIGN</p>
+                  <p class="projectName_Kr">셀리나 패키지 디자인</p>
+                  <div class="projectItmBox">
+                    <p class="projectItm">#개인작업</p>
+                    <p class="projectItm">#PACKAGE</p>
+                    <p class="projectItm">#ILLUSTRATOR</p>
+                  </div>
+                </div>
+                <a href="#" target="_blank"
+                  ><img
+                    class="Project_Img sizeUp"
+                    src="./common/images/project/CELINA.png"
                     alt="project1"
                 /></a>
               </div>
@@ -407,57 +443,41 @@ https://cdn.jsdelivr.net/npm/jquery@3.6.3/dist/jquery.min.js
         <div class="portfolio_Project">
           <div class="swiper mySwiper">
             <div class="swiper-wrapper">
-              <div class="swiper-slide">
+              <div class="swiper-slide ">
                 <div class="slide_title">
-                  <p class="projectDate">2022-11</p>
-                  <p class="projectName_En">KNOTTERS WEB PUBLISHING</p>
-                  <p class="projectName_Kr">노터 웹퍼블리싱</p>
+                  <p class="projectDate">2021-05</p>
+                  <p class="projectName_En">SILHOUETTE WEB DESIGN</p>
+                  <p class="projectName_Kr">실루엣 웹 디자인</p>
                   <div class="projectItmBox">
-                    <p class="projectItm">#팀작업</p>
-                    <p class="projectItm">#UI/UX</p>
-                    <p class="projectItm">#JAVASCRIPT</p>
+                    <p class="projectItm">#개인작업</p>
+                    <p class="projectItm">#WEB</p>
+                    <p class="projectItm">#ILLUSTRATOR</p>
+                    <p class="projectItm">#PHOTOSHOP</p>
                   </div>
                 </div>
-                <a href="#"
+                <a href="https://lensvery.com/category/%EC%8B%A4%EB%A3%A8%EC%97%A3/172/" target="_blank"
                   ><img
                     class="Project_Img"
-                    src="./project/knotters/img_main_intro.jpg"
+                    src="./common/images/project/SILHOUTTE_BLUEGRAY.png"
                     alt="project1"
                 /></a>
               </div>
               <div class="swiper-slide">
                 <div class="slide_title iden">
-                  <p class="projectDate">2022-11</p>
-                  <p class="projectName_En">KNOTTERS WEB PUBLISHING</p>
-                  <p class="projectName_Kr">노터 웹퍼블리싱</p>
+                  <p class="projectDate">2020-07</p>
+                  <p class="projectName_En">RICHANN WEB DESIGN</p>
+                  <p class="projectName_Kr">리치앤 웹 디자인</p>
                   <div class="projectItmBox">
-                    <p class="projectItm">#팀작업</p>
-                    <p class="projectItm">#UI/UX</p>
-                    <p class="projectItm">#JAVASCRIPT</p>
+                    <p class="projectItm">#개인작업</p>
+                    <p class="projectItm">#WEB</p>
+                    <p class="projectItm">#ILLUSTRATOR</p>
+                    <p class="projectItm">#PHOTOSHOP</p>
                   </div>
                 </div>
-                <a href="#"
+                <a href="https://ann365.com/product/detail.html?product_no=679&cate_no=328&display_group=1" target="_blank"
                   ><img
                     class="Project_Img"
-                    src="./project/knotters/img_main_intro.jpg"
-                    alt="project1"
-                /></a>
-              </div>
-              <div class="swiper-slide">
-                <div class="slide_title">
-                  <p class="projectDate">2022-11</p>
-                  <p class="projectName_En">KNOTTERS WEB PUBLISHING</p>
-                  <p class="projectName_Kr">노터 웹퍼블리싱</p>
-                  <div class="projectItmBox">
-                    <p class="projectItm">#팀작업</p>
-                    <p class="projectItm">#UI/UX</p>
-                    <p class="projectItm">#JAVASCRIPT</p>
-                  </div>
-                </div>
-                <a href="#"
-                  ><img
-                    class="Project_Img"
-                    src="./project/knotters/img_main_intro.jpg"
+                    src="./common/images/project/RICHANN.jpg"
                     alt="project1"
                 /></a>
               </div>
