--- a/peachc_Page.html
+++ b/peachc_Page.html
@@ -45,7 +45,7 @@
     <main class="page-start">
       <div class="projectTitleBox">
         <div class="projectTitle">
-          <h2>PEACH C WEB PORTFOLIO</h2>
+          <h2>PEACH C WEB PUBLISHING</h2>
           <h3>피치씨 웹퍼블리싱</h3>
         </div>
         <div class="SubTitle_Box">
