--- a/Knotters.html
+++ b/Knotters.html
@@ -35,10 +35,10 @@
            /></a>
            </h1>
       <ul class="Menu">
-        <li class="menu_Main text_doc"><a href="/index.html">Main</a></li>
-        <li class="menu_Work text_doc"><a href="#">Work</a></li>
-        <li class="menu_About text_doc"><a href="#">About</a></li>
-        <li class="menu_Contact text_doc"><a href="#">Contact</a></li>
+        <li class="menu_Main text_doc"><a href="./index.html">Main</a></li>
+        <li class="menu_Work text_doc"><a href="./index.html">Work</a></li>
+        <li class="menu_About text_doc"><a href="./index.html">About</a></li>
+        <li class="menu_Contact text_doc"><a href="./index.html">Contact</a></li>
       </ul>
     </header>
     <main class="page-start">
