--- a/PACKAGE_SILHOUETTE.html
+++ b/PACKAGE_SILHOUETTE.html
@@ -35,10 +35,10 @@
       /></a>
       </h1>
       <ul class="Menu">
-        <li class="menu_Main text_doc"><a href="/index.html">Main</a></li>
-        <li class="menu_Work text_doc"><a href="#">Work</a></li>
-        <li class="menu_About text_doc"><a href="#">About</a></li>
-        <li class="menu_Contact text_doc"><a href="#">Contact</a></li>
+        <li class="menu_Main text_doc"><a href="./index.html">Main</a></li>
+        <li class="menu_Work text_doc"><a href="./index.html">Work</a></li>
+        <li class="menu_About text_doc"><a href="./index.html">About</a></li>
+        <li class="menu_Contact text_doc"><a href="./index.html">Contact</a></li>
       </ul>
     </header>
     <main class="page-start">
@@ -78,7 +78,7 @@
           <div class="box">
             <div class="box_1 project">
               <h4>프로젝트</h4>
-              <p>웹포트폴리오</p>
+              <p>SILHOUETTE</p>
             </div>
             <div class="box_1 date">
               <h4>작업기간</h4>
@@ -106,7 +106,7 @@
             </a>
         </div>
         <div class="wishList_next">
-            <a href="./peachc_Page.html">
+            <a href="./PACKAGE_ROSEMOON.html">
               <div class="next_title">
                 <h3>Next</h3>
                 <h2>로즈문 패키지</h2>
