--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@ https://cdn.jsdelivr.net/npm/jquery@3.6.3/dist/jquery.min.js
                     <p class="projectItm">#ILLUSTRATOR</p>
                   </div>
                 </div>
-                <a href="#" target="_blank"
+                <a href="./PACKAGE_ROSEMOON.html" target="_blank"
                   ><img
                     class="Project_Img"
                     src="./common/images/project/ROSEMOON_PACKAGE.png"
@@ -373,14 +373,14 @@ https://cdn.jsdelivr.net/npm/jquery@3.6.3/dist/jquery.min.js
                 <div class="slide_title bk">
                   <p class="projectDate">2019-10</p>
                   <p class="projectName_En">NARULERA PACKAGE DESIGN</p>
-                  <p class="projectName_Kr">내츄렐라 패키지 디자인</p>
+                  <p class="projectName_Kr">내추렐라 패키지 디자인</p>
                   <div class="projectItmBox">
                     <p class="projectItm">#개인작업</p>
                     <p class="projectItm">#PACKAGE</p>
                     <p class="projectItm">#ILLUSTRATOR</p>
                   </div>
                 </div>
-                <a href="#" target="_blank"
+                <a href="./PACKAGE_NARULERA.html" target="_blank"
                   ><img
                     class="Project_Img"
                     src="./common/images/project/NARULERA_3.png"
@@ -390,7 +390,7 @@ https://cdn.jsdelivr.net/npm/jquery@3.6.3/dist/jquery.min.js
               <div class="swiper-slide">
                 <div class="slide_title bk">
                   <p class="projectDate">2022-06</p>
-                  <p class="projectName_En">CABBAGE PACKAGE DESIGN</p>
+                  <p class="projectName_En">CABBAGE MASKPACK PACKAGE DESIGN</p>
                   <p class="projectName_Kr">양배추 마스크팩 패키지 디자인</p>
                   <div class="projectItmBox">
                     <p class="projectItm">#개인작업</p>
@@ -606,8 +606,8 @@ https://cdn.jsdelivr.net/npm/jquery@3.6.3/dist/jquery.min.js
           <div class="portfolioPersonal Career">
             <h2>경력</h2>
             <ul>
-              <li>2020.03 ~ 2021.12:뷰티브랜드 디자인팀 근무(총1년10개월)</li>
-              <li>2022.03 ~ 2022.07:뷰티브랜드 디자인팀 근무(총5개월)</li>
+              <li>2020.03 ~ 2021.12:렌즈베리 디자인팀 근무(총1년10개월)</li>
+              <li>2022.05 ~ 2022.07:뷰티브랜드 디자인팀 근무(총5개월)</li>
             </ul>
           </div>
           <div class="portfolioPersonal Certificate">
