230224 작업 제작 완료

--- a/PACKAGE_CABBAGE.html
+++ b/PACKAGE_CABBAGE.html
@@ -97,7 +97,7 @@
             </a>
         </div>
         <div class="wishList_next">
-            <a href="./PACKAGE_ROSEMOON.html">
+            <a href="./PACKAGE_celina.html">
               <div class="next_title">
                 <h3>Next</h3>
                 <h2>셀리나 패키지</h2>
