--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@ https://cdn.jsdelivr.net/npm/jquery@3.6.3/dist/jquery.min.js
                     <p class="projectItm">#ILLUSTRATOR</p>
                   </div>
                 </div>
-                <a href="#" target="_blank"
+                <a href="./PACKAGE_CABBAGE.html" target="_blank"
                   ><img
                     class="Project_Img"
                     src="./common/images/project/CABBAGE_PACKAGE_1.png"
@@ -416,7 +416,7 @@ https://cdn.jsdelivr.net/npm/jquery@3.6.3/dist/jquery.min.js
                     <p class="projectItm">#ILLUSTRATOR</p>
                   </div>
                 </div>
-                <a href="#" target="_blank"
+                <a href="./PACKAGE_celina.html" target="_blank"
                   ><img
                     class="Project_Img sizeUp"
                     src="./common/images/project/CELINA.png"
