--- a/peachc.html
+++ b/peachc.html
@@ -526,12 +526,12 @@
               <span>Review</span>
             </h3>
           </div>
-          <ul class="review_Menu">
+          <!-- <ul class="review_Menu">
             <li class="reviewMenu All">All</li>
             <li class="reviewMenu Face">Face</li>
             <li class="reviewMenu Eye">Eye</li>
             <li class="reviewMenu Lip">Lip</li>
-          </ul>
+          </ul> -->
         </div>
         <!-- Swiper -->
         <div class="swiper mySwiper">
@@ -596,52 +596,6 @@
                 <p>가볍고 부드럽게 발려요!<br>컬러도 너무 예뻐요!<br>다음에 다른 컬러로 또 구입할래요!</p>
               </div>
             </div>
-            <div class="swiper-slide All_Box Face_Box">
-              <img
-                src="./project/peachc/common/images/products/custion.png"
-              />
-              <div class="review_mention">
-                <span>★★★★★ </span>
-                <h3>꿀복숭아 쿠션</h3>
-                <p>옅게 화장할때 잘 쓰고 있어요~<br>좋아요!</p>
-              </div>
-            </div>
-          </div>
-          <!-- <div class="swiper-button-next"></div>
-          <div class="swiper-button-prev"></div> -->
-          <div class="swiper-scrollbar"></div>
-          <!-- <div class="swiper-pagination"></div> -->
-        </div>
-      </div>
-      <div class="review_Box review_Box2">
-        <div class="review_title">
-          <div class="title">
-            <h3>
-              <span>Review</span>
-            </h3>
-          </div>
-          <ul class="review_Menu">
-            <li class="reviewMenu All">All</li>
-            <li class="reviewMenu Face">Face</li>
-            <li class="reviewMenu Eye">Eye</li>
-            <li class="reviewMenu Lip">Lip</li>
-          </ul>
-        </div>
-        <!-- Swiper -->
-        <div class="swiper mySwiper">
-          <div class="swiper-wrapper">
-            
-            <div class="swiper-slide All_Box Face_Box">
-              <img class="base"
-                src="./project/peachc/common/images/products/base.png"
-              />
-              <div class="review_mention">
-                <span>★★★★★ </span>
-                <h3>피치 글로우 메이크업베이스</h3>
-                <p>아침에 화장할 시간없을때<br>바르면 톤업 효과가 나서 좋아요!</p>
-              </div>
-            </div>
-            
             <div class="swiper-slide All_Box Face_Box">
               <img
                 src="./project/peachc/common/images/products/custion.png"
