--- a/peachc_Page.html
+++ b/peachc_Page.html
@@ -100,7 +100,7 @@
               <figure class="figure_logobk">
                 <img
                   class="logo_bk"
-                  src="/project/peachc/common/images/logo/favicon_대지 1.png"
+                  src="./project/peachc/common/images/logo/favicon_대지 1.png"
                   alt="favicon"
                 />
                 <figcaption>Symbol</figcaption>
