--- a/PACKAGE_CABBAGE.html
+++ b/PACKAGE_CABBAGE.html
@@ -64,7 +64,7 @@
         <div class="mentionBox">
           <div class="mention">
             <h2>양배추 성분을 강조한 패키지 디자인</h2>
-            <p>피치포포 양배추 시리즈가 앰플가 앰플에 이어 마스크팩으로 출시하였습니다.<br>
+            <p>피치포포 양배추 시리즈가 앰플에 이어 마스크팩으로 출시하였습니다.<br>
               주성분인 양배추가 돋보이도록 성분 이미지를 배경으로 사용하여 패키지를<br>
               디자인하였습니다.
             </p>
